Fix client search cards on small screens (adjust health emergency info)

--- a/app/assets/stylesheets/application/components/_card.scss
+++ b/app/assets/stylesheets/application/components/_card.scss
@@ -189,14 +189,33 @@
 }
 
 .c-card__detail-col {
-  flex: 0 0 33%;
-  max-width: 33%;
-  padding-top: space(4);
-  @include media-breakpoint-down(sm) {
-    flex: 0 0 100%;
-    margin-bottom: space(4);
+  display: flex;
+  margin-bottom: space(4);
+  flex: 1 1 100%;
+  &:first-child {
+    margin-top: space(4);
+  }
+  &:last-child {
+    margin-bottom: 0;
+  }
+  @include media-breakpoint-up(lg) {
+    &:first-child {
+      margin-top: 0;
+      max-width: 33%;
+      flex: 1 1 33%;
+    }
+    padding-top: space(4);
+    flex: 1 1 auto;
   }
 }
+
+.c-card__detail-col--reversed-mobile {
+  flex-direction: column-reverse;
+  @include media-breakpoint-up(lg) {
+    flex-direction: column;
+  }
+}
+
 .c-card__content .c-card__detail-col {
   &:last-child {
     padding-bottom: 0;
