--- a/app/assets/stylesheets/application/overrides/bootstrap/container.scss
+++ b/app/assets/stylesheets/application/overrides/bootstrap/container.scss
@@ -1,7 +1,7 @@
 @import '../../helpers';
 
 .container-fluid {
-  @include media-breakpoint-up(sm) {
+  @include media-breakpoint-up(md) {
     padding-right: 30px;
     padding-left: 30px;
   }
